# harpia2_eloquent

src/fault_detection/: CMakeLists.txt  package.xml
src/fault_detection/anomaly_detection/scripts/: anomaly_detector.py  listener.py
src/fault_detection/anomaly_detection/scripts/libs/: LandingController.py  uavAction.py
src/fault_detection/models_train/2.AnomalyDetection/: VelocityController.py  generate_flight_data.py  reinforcement_hover.py
src/fault_detection/models_train/2.AnomalyDetection/ROS_Fundamentals/: pubvel.cpp
src/fault_detection/weather_check/scripts/: test_client.py  weather_check_server.py
src/harpia_msgs/: CMakeLists.txt  package.xml
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: DronePose.msg  Map.msg  RegionPoint.msg  UAV.msg
src/interfaces/srv/: MissionFaultMitigation.srv  MissionGoalManager.srv
src/mission_fault_mitigation/: package.xml  setup.cfg  setup.py
src/mission_fault_mitigation/mission_fault_mitigation/: mission_fault_mitigation_server.py
src/mission_goal_manager/: package.xml  setup.cfg  setup.py
src/mission_goal_manager/mission_goal_manager/: mission_goal_manager_server.py  mission_goal_manager_server_old.py  mission_goal_manager_server_temporal_planing.py
src/mission_planning/: package.xml  setup.cfg  setup.py
src/mission_planning/scripts/: mission_planner_server.py  test_add_goal.py  test_client (copy).py  test_client.py
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/scripts/: path_planning_server.py
src/path_planning/scripts/.ipynb_checkpoints/: knn_data_genetator-checkpoint.ipynb
src/path_planning/scripts/libs/AG/: requirements.txt
src/path_planning/scripts/libs/Behaviours/: behaviours.py
